# frost_ui

./: .gitignore  LICENSE-Apache-2.0  README.md  build.sh  info.md  meta.yaml
raw/exd/: uicolor_0.exd.comp
raw/ui/uld/: logo_sqex_hr1.tex
tools/: recast_svg.py
tools/preprocessor/: Cargo.toml  build.sh
tools/preprocessor/src/: icons.rs  main.rs  meta.rs  metabase.rs  tex_composite.rs  uld.rs
tools/preprocessor/src/meta/: dalamud.rs
