[package]
name = "preprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
xml-rs = "0.8.20"
resvg = "0.41.0"
image = "0.25.1"
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.103"
serde_yaml = "0.9.34"
rayon = "1.10.0"